<resources>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="tired_ads">Tired of Ads?</string>
    <string name="buy_premium">Buy Premium Version</string>
    <string name="app_name_for_admob_test">AdMobTest</string>
    <string name="loading">Loading...</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card S I</string>
    <string name="not_enough_space">Not enough space S I</string>
    <string name="pick_a_color">Pick a Color S I</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="jira_project">PREG</string>
    <string name="jira_component_id">10669</string>
    <string name="error_relogin">Your session has expired. Please log in to the application.</string>
    <string name="ok">OK</string>
    <string name="facebook_credentials_invalid">The Facebook credentials are invalid</string>
    <string name="error_fb_authentication_failed">Facebook authentication failed.</string>
    <string name="error_tw_authentication_failed">Twitter authentication failed.</string>
    <string name="jira_summary_must_be_filled">Summary must be filled!</string>
    <string name="jira_error_login">Error loggin in. Check user and password</string>
    <string name="jira_session_expired">Session Expired</string>
    <string name="jira_error_loading_versions">Error loading versions!</string>
    <string name="jira_issue_created">Issue created!</string>
    <string name="jira_issue_creation_failed">Issue creation failed!</string>
    <string name="jira_create_issue">Create Issue</string>
    <string name="jira_user">user</string>
    <string name="jira_password">Password</string>
    <string name="jira_login">login</string>
    <string name="jira_logged_in_as">"Logged in as: "</string>
    <string name="jira_change">change</string>
    <string name="jira_priority">Priority:</string>
    <string name="jira_fix_version">Fix Version:</string>
    <string name="jira_affects_version">Affects Version:</string>
    <string name="jira_summary">Summary</string>
    <string name="jira_description">Description</string>
    <string name="jira_send">Create</string>
    <string name="jira_crash">Crash!</string>
    <string name="jira_click_to_see_crash">Click to see crash</string>
    <string name="lang_iso">en</string>
    <string name="service_unavailable">"There's a problem with our servers. Please try again later."</string>
    <string name="unknown_error">"An unexpected error has occurred. We're working to fix it soon."</string>
    <string name="connection_problem">There is a problem with your internet connection. Please try again.</string>
    <string name="no_internet_connection">"You're not connected to the Internet"</string>
    <string name="last_updated">Last Updated: %1$s</string>
    <string name="pull_down_refresh">Pull down to refresh...</string>
    <string name="release_refresh">Release to refresh...</string>
    <string name="moment">a moment</string>
    <string name="debug">DEBUG</string>
    <string name="coupon">Coupon</string>
    <string name="coupon_plural">Coupons</string>
    <string name="coupon_expired">Expired coupon</string>
    <string name="enter_code">Enter your code here</string>
    <string name="have_coupon">Do you have a coupon?</string>
    <string name="or">OR</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="app_name">Trivia Crack</string>
    <string name="login_start_playing">Sign in and start playing</string>
    <string name="login_with_email">Sign in with Email Address</string>
    <string name="trouble_signin">Trouble signing in? Get Help!</string>
    <string name="facebook_never_post">"We'll never post to your wall without your permission."</string>
    <string name="login_email_title">"Don't have a Facebook account?"</string>
    <string name="login_with_guest">Play now, sign up later SI</string>
    <string name="type_email">Enter your email address</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="no_account">"If you don't have an account we will create one automatically for you."</string>
    <string name="password">Password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="account_with_no_password">"Your account has no password set. Press 'Reset Password' and we will send you one to your email."</string>
    <string name="link_account">Link Account</string>
    <string name="enter_original">"Enter your original %1$s account's information."</string>
    <string name="chat">Chat</string>
    <string name="last_seen">Seen</string>
    <string name="facebook">Facebook</string>
    <string name="profile">Profile</string>
    <string name="poke">Poke</string>
    <string name="reject">Reject</string>
    <string name="resign">Resign</string>
    <string name="delete_">Delete</string>
    <string name="rematch">Rematch</string>
    <string name="share">Share</string>
    <string name="friend_plural">Friends</string>
    <string name="all_plural">All</string>
    <string name="confirm">Confirm</string>
    <string name="new_questions">New Questions!</string>
    <string name="set_country">Select your country</string>
    <string name="set_country_hint">Confirm your country to receive fun questions from your region</string>
</resources>