<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/GameOptionsBgStyle"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:emx="http://schemas.android.com/apk/res-auto">
    <com.etermax.gamescommon.view.GameOptionButton android:id="@id/game_option_profile" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="3.0dip" android:layout_weight="1.0" emx:btn_src="@drawable/dashboard_profile_icon" emx:btn_text="@string/profile" />
    <com.etermax.gamescommon.view.GameOptionButton android:id="@id/game_option_chat" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="3.0dip" android:layout_weight="1.0" emx:btn_src="@drawable/dashboard_chat_icon" emx:btn_text="@string/chat" />
    <com.etermax.gamescommon.view.GameOptionButton android:id="@id/game_option_poke" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="3.0dip" android:layout_weight="1.0" emx:btn_src="@drawable/dashboard_poke_icon" emx:btn_text="@string/poke" />
    <com.etermax.gamescommon.view.GameOptionButton android:id="@id/game_option_rematch" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="3.0dip" android:layout_weight="1.0" emx:btn_src="@drawable/dashboard_rematch_icon" emx:btn_text="@string/rematch" />
    <com.etermax.gamescommon.view.GameOptionButton android:id="@id/game_option_publish" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="3.0dip" android:layout_weight="1.0" emx:btn_src="@drawable/dashboard_share_icon" emx:btn_text="@string/share" />
    <com.etermax.gamescommon.view.GameOptionButton android:id="@id/game_option_reject" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="3.0dip" android:layout_weight="1.0" emx:btn_src="@drawable/dashboard_reject_icon" emx:btn_text="@string/reject" />
    <com.etermax.gamescommon.view.GameOptionButton android:id="@id/game_option_resign" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="3.0dip" android:layout_weight="1.0" emx:btn_src="@drawable/dashboard_resign_icon" emx:btn_text="@string/resign" />
    <com.etermax.gamescommon.view.GameOptionButton android:id="@id/game_option_delete" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="3.0dip" android:layout_weight="1.0" emx:btn_src="@drawable/dashboard_trash_icon" emx:btn_text="@string/delete_" />
</LinearLayout>