<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/background_layout" />
    <include android:id="@id/login_header" layout="@layout/login_header_with_button" />
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/login_layout_padding" android:paddingRight="@dimen/login_layout_padding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/login_header" style="@style/LoginLink">
        <com.etermax.tools.widget.CustomFontTextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/login_title_margin_top" android:text="@string/link_account" style="@style/LoginLinkTitle" />
        <EditText android:textSize="@dimen/font_normal" android:id="@id/email_edit_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/login_item_gap" android:hint="@string/email" android:maxLines="1" android:inputType="textEmailAddress" android:imeOptions="actionNext" style="@style/LoginLinkInput" />
        <EditText android:textSize="@dimen/font_normal" android:id="@id/password_edit_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/login_item_gap" android:hint="@string/password" android:maxLines="1" android:inputType="textPassword" android:imeOptions="actionSend" style="@style/LoginLinkInput" />
        <com.etermax.tools.widget.CustomFontTextView android:textSize="@dimen/font_normal" android:textColor="#ffffffff" android:gravity="center" android:id="@id/enter_original_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/login_item_gap" android:text="@string/enter_original" style="@style/LoginLinkSubtitle" />
    </LinearLayout>
</RelativeLayout>