<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/ChatHeaderBackgroundTheme"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.etermax.tools.widget.UsernameCustomFontTextView android:id="@id/chat_header_title" android:text="@string/chat" style="@style/ChatHeaderTextTheme" />
        <com.etermax.tools.widget.CustomFontTextView android:id="@id/chat_header_last_seen" android:text="@string/last_seen" style="@style/ChatHeaderLastSeenTextTheme" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/friends_panel_entry" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/ChatHeaderFriendsPanelEntryBackground">
        <LinearLayout android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="1.0">
            <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:contentDescription="@string/app_name" style="@style/ChatHeaderFriendsPanelEntryImage" />
                <com.etermax.tools.widget.CustomFontTextView android:id="@id/unreadMessages" android:visibility="gone" style="@style/ChatHeaderFriendsPanelEntryUnreadTextTheme" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>