<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:padding="@dimen/leftright_padding" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/SetCountryTheme"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.etermax.tools.widget.CustomFontButton android:id="@id/set_country_confirm_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/button_padding_bottom" android:text="@string/confirm" android:layout_alignParentBottom="true" style="@style/SetCountryConfirmButtonTheme" />
    <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/set_country_confirm_button">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/set_country_choose_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <com.etermax.tools.widget.CustomFontTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_country" style="@style/SetCountryYourCountryTheme" />
            <RelativeLayout android:id="@id/set_country_chooser" android:layout_width="@dimen/login_set_country_width" android:layout_height="@dimen/login_set_country_height" android:layout_margin="10.0dip" style="@style/SetCountryChosenCountryContainerTheme">
                <com.etermax.tools.widget.CustomFontTextView android:gravity="center" android:id="@id/set_country_chosen_text_view" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/SetCountryChosenCountryTheme" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/login_set_country_margin" android:layout_above="@id/set_country_choose_container">
            <com.etermax.tools.widget.CustomFontTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_questions" style="@style/SetCountryTitleTheme" />
            <com.etermax.tools.widget.CustomFontTextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_country_hint" style="@style/SetCountrySubtitleTheme" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>